--- a/index.html
+++ b/index.html
@@ -1,56 +1,7 @@
 <!DOCTYPE html>
 <html>
-CALL FOR PAPER
+ <head>
 AI + Informetrics: Multi-disciplinary Interactions in the Era of Big Data
-You are invited to participate in the 1st Workshop on AI + Informetrics (AII2021) to be held as a virtual event as part of the iConference 2021 in Beijing, China on March 28-31, 2021. See https://ischools.org/Program
-
-Purpose of the Workshop
-Driven by the big data boom, informetrics, known as the study of quantitative aspects of information, has gained great benefits from artificial intelligence (Nilsson 1998) – including a wide range of intelligent agents through techniques such as neural networks, genetic programming, computer vision, heuristic search, knowledge representation and reasoning, Bayes network, planning and language understanding. With its capacities in analyzing unstructured scalable data and streams, understanding uncertain semantics, and developing robust and repeatable models, “Artificial Intelligence + Informetrics” has demonstrated enormous success in turning big data into big value and impact by handling diverse challenges raised from multiple disciplines and research areas. For example, bibliometric-enhanced information retrieval (Mayr et al., 2014), science mapping with topic models (Suominen and Toivanen, 2016), streaming data analytics for tracking technological change (Zhang et al., 2017), and entity extraction with unsupervised machine learning techniques (Zhang et al., 2019). Such endeavours with broadened perspectives from machine intelligence would portend far-reaching implications for science (Fortunato et al., 2018), but how to effectively cohere the power of AI and informetrics to create cross-disciplinary solutions is still elusive from neither theoretical nor practical perspectives.
-This workshop is to gather researchers and practical users to open a collaborative platform for exchanging ideas, sharing pilot studies, and scoping future directions on this cutting-edge venue. We highlight “AI + Informetrics” as endeavors in constructing fundamental theories, developing novel methodologies, bridging conceptual knowledge with practical uses, and creating real-word solutions.
-*Interests to this workshop include, but not limited to the following topics:
-•	Informetrics with machine learning (including deep learning)
-•	Informetrics with natural language processing or computational linguistics
-•	Informetrics with computer vision
-•	Informetrics with other related AI techniques (e.g., information retrieval)
-•	AI for science of science
-•	AI for science, technology, & innovation
-•	AI for research policy and strategic management
-•	Applications of AI-enhanced informetrics
-
-Submission Guidelines
-All papers must follow the guidelines on iConference’s Author Instructions Page. 
-Length
-Up to 6,000 words (excluding references) in Springer’s prescribed LNCS template
-Submissions 
-Easychair
-Timeline
-Submission deadline: Feb 15, 2021
-Notification date: Feb 28, 2021
-Final camera-ready versions due: March 7, 2021
-
-Review Process
-All submissions will be reviewed by at least two independent reviewers. Please be aware of the fact that once the paper is accepted, at least one author per paper needs to register for the workshop and attend the workshop to present the work. In light of the recent events regarding the Coronavirus, AII2021 will be an all-virtual workshop as iConference will be online only.
-Workshop proceedings will be deposited online in the CEUR workshop proceedings publication service. This way the proceedings will be permanently available and citable (digital persistent identifiers and long-term preservation).
-
-Special Issues
-Potential target journals for our special issues include Scientometrics, Journal of Informetrics, Journal of Data and Information Science, and Frontiers in Research Metrics and AnalyticsI.
-
-Organizers
-Yi Zhang, Australian Artificial Intelligence Institute, University of Technology Sydney, Australia.
-Chengzhi Zhang, Department of Information Management, Nanjing University of Science and Technology, China.
-Philipp Mayr, GESIS – Leibniz Institute for the Social Sciences, Germany.
-Arho Suominen, VTT Technical Research Centre of Finland, & Tampere University, Industrial Engineering, Finland
-
-Website
-https://ai-informetrics.github.io/
-
-References
-Fortunato, S., …, et al., 2018. Science of science. Science, 359(6379).
-Nilsson, N.J., 1998. Artificial intelligence: A new synthesis. Morgan Kaufmann.
-Mayr, P., …, et al., 2014, April. Bibliometric-enhanced information retrieval. In European Conference on Information Retrieval (pp. 798-801). Springer, Cham.
-Suominen, A. and Toivanen, H., 2016. Map of science with topic modeling: Comparison of unsupervised learning and human‐assigned subject classification. Journal of the Association for Information Science and Technology, 67(10), pp.2464-2476.
-Zhang, Y., Zhang, C., 2019. Unsupervised keyphrase extraction in academic publications using human attention. 17th International Conference on Scientometrics and Informetrics (ISSI 2019), Rome, Italy. 
-Zhang, Y., …, et al., 2017. Scientific evolutionary pathways: Identifying and visualizing relationships for scientific topics. Journal of the Association for Information Science and Technology, 68(8), pp.1925-1939.
-
+  </head>
 </body>
 </html>
