--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 		  <strong>Venue:</strong>  2020 Conference on Empirical Methods in Natural LanguageProcessing (EMNLP 2020)<br>
           <strong>Website</strong>: <a href="https://ornlcda.github.io/SDProc/">https://ornlcda.github.io/SDProc/</a> </p>
 		   <p align="left"><strong>EEKE 2020</strong><strong>：</strong>First Workshop on Extraction and Evaluation of Knowledge Entities from Scientific Documents <br>
-             <strong>Venue:</strong> ACM/IEEE Joint Conference on Digital Libraries 2020 (JCDL2020), <br>
+             <strong>Venue:</strong> ACM/IEEE Joint Conference on Digital Libraries 2020 (JCDL2020)<br>
            <strong>Website</strong>: <a href="https://eeke2020.github.io/">https://eeke2020.github.io/</a></p>
 
       </div>
