--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>1st Workshop on Extraction and Evaluation of Knowledge Entities from Scientific Documents (EEKE2020)</title>
+  <title>1st Workshop on AI + Informetrics (AII2021)</title>
   <meta name="description" content="JCDL 2020 Workshop">
   <meta name="author" content="">
 
