--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           <li>Mayr, P., …, et al., 2014, April. Bibliometric-enhanced information retrieval. In <em>European Conference on Information Retrieval</em> (pp. 798-801). Springer, Cham.</li>
           <li>Suominen, A. and Toivanen, H., 2016. Map of science with topic modeling: Comparison of unsupervised learning and human‐assigned subject classification. <em>Journal of the Association for Information Science and Technology</em>, 67(10), pp.2464-2476.</li>
           <li>Zhang, Y., Zhang, C., 2019. Unsupervised keyphrase extraction in academic publications using human attention. <em>17th International Conference on Scientometrics and Informetrics</em> (ISSI 2019), Rome, Italy. </li>
-          <li>Zhang, Y., …, et al., 2017. Scientific evolutionary pathways: Identifying and visualizing relationships for scientific topics. <em>Journal of the Association for Information Science and Technology</em>, 68(8), pp.1925-1939.</li>
+          <li>Zhang, Y., et al., 2017. Scientific evolutionary pathways: Identifying and visualizing relationships for scientific topics. <em>Journal of the Association for Information Science and Technology</em>, 68(8), pp.1925-1939.</li>
         </ol>
         
         <a name="links"></a>
