--- a/index.html
+++ b/index.html
@@ -163,10 +163,8 @@
         <p align="left"><strong>Related  Workshops</strong>：<br>
           <strong>BIRNDL  2019</strong><strong>：</strong>The 4th Joint Workshop on Bibliometric-enhanced Information Retrieval  and Natural Language Processing for Digital Libraries<br>
           <strong>Venue:</strong> SIGIR 2019 in Paris, France<br>
-          <strong><br>
           <strong>Proceedings</strong>: <a href="http://ceur-ws.org/Vol-2414/">http://ceur-ws.org/Vol-2414/</a> </p>
-		  
-	    <p align="left"><br>
+        <p align="left">
           <strong>SDP 2020</strong><strong>：</strong>First Workshop on Scholarly Document Processing<br>
 		  <strong>Venue:</strong>  2020 Conference on Empirical Methods in Natural LanguageProcessing (EMNLP 2020)<br>
           <strong>Website</strong>: <a href="https://ornlcda.github.io/SDProc/">https://ornlcda.github.io/SDProc/</a> </p>
