--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@
         <strong>Philipp Mayr </strong>(<a href="mailto: philipp.mayr@gesis.org"> philipp.mayr@gesis.org</a>) is a  team leader at the GESIS - Leibniz-Institute for the Social   Sciences  department Knowledge Technologies for the Social Sciences (WTS). He received  his PhD in applied informetrics and information   retrieval from the Berlin  School of Library and Information Science at Humboldt University Berlin. He has  published in top conferences and   prestigious journals in the areas  informetrics, information retrieval and digital libraries. His research group  focuses on methods and   techniques for interactive information retrieval and  data set search.   He was the main organizer of the BIR workshops at ECIR 2014-2020  and   the BIRNDL workshops at JCDL 2016 and SIGIR 2017-2019. (<a href="https://philippmayr.github.io/">https://philippmayr.github.io/</a>)        </p>
         <p align="justify">&nbsp;</p>
         <p align="justify">Arho Suominen, (<a href="mailto: Arho.Suominen@vtt.fi">Arho.Suominen@vtt.fi</a>) VTT Technical Research Centre of Finland, &amp; Tampere University, Industrial Engineering, Finland </p>
-        <p align="justify">&nbsp;</p>
-        <p align="justify">&nbsp;</p>
+        <p align="justify">All questions about submissions should be emailed to Organizing Committee        </p>
         <h2 align="left">Programme Committee</h2>
         <ul>
           <li>TBD</li>
         </ul>
+        <p>&nbsp;</p>
         
         <h2 align="justify">References</h2>
         <ol>
