--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
         <p align="justify">TBD</p>
         <h2 align="left">Important Dates</h2>
         <p align="justify">All dates are Anywhere on Earth (AoE).</p>
-        <p>Submission deadline: Feb 1, 2021<br>
-          Notification date: Feb 28, 2021<br>
-        Final camera-ready versions due: March 7, 2021</p>
+        <p>Submission deadline: <strong>Feb 1, 2021</strong><br>
+          Notification date: <strong>Feb 28, 2021</strong><br>
+        Final camera-ready versions due: <strong>March 7, 2021</strong></p>
         <p>&nbsp;</p>
         <h2 align="left">Review Process</h2>
         All submissions will be reviewed by at least two independent reviewers. Please be aware of the fact that once the paper is accepted, at least one author per paper needs to register for the workshop and attend the workshop to present the work. In light of the recent events regarding the Coronavirus, AII2021 will be an all-virtual workshop as iConference will be online only.<br>
