--- a/index.html
+++ b/index.html
@@ -113,7 +113,6 @@
         </ul>
         <h2 align="left">Call for Papers</h2>
     <p align="justify">You are invited to participate in the 1st Workshop on AI + Informetrics (AII2021) to be held as a virtual event as part of the <a href="https://www.ischools.org/iConference">iConference2021</a>, Virtual, on March 28-31, 2021. See https://ischools.org/Program </p>
-    <p align="justify"><a href="https://ai-informetrics.github.io/">https://ai-informetrics.github.io/</a></p>
         <h2 align="left">Submission Information</h2>
         <p align="justify">TBD</p>
         <h2 align="left">Important Dates</h2>
@@ -145,7 +144,8 @@
         <ul>
           <li>TBD</li>
         </ul>
-        <p>&nbsp;</p>
+        <h2 align="justify">Website</h2>
+        <p><a href="https://ai-informetrics.github.io/">https://ai-informetrics.github.io/</a></p>
         
         <h2 align="justify">References</h2>
         <ol>
