--- a/index.html
+++ b/index.html
@@ -111,10 +111,12 @@
           <li>AI for research policy and strategic management</li>
           <li>Applications of AI-enhanced informetrics	</li>
         </ul>
+        <p>&nbsp;</p>
         <h2 align="left">Call for Papers</h2>
     <p align="justify">You are invited to participate in the 1st Workshop on AI + Informetrics (AII2021) to be held as a virtual event as part of the <a href="https://www.ischools.org/iConference">iConference2021</a>, Virtual, on March 28-31, 2021. See https://ischools.org/Program </p>
         <h2 align="left">Submission Information</h2>
         <p align="justify">TBD</p>
+        <p align="justify">&nbsp;</p>
         <h2 align="left">Important Dates</h2>
         <p align="justify">All dates are Anywhere on Earth (AoE).</p>
         <p>Submission deadline: <strong>Feb 1, 2021</strong><br>
@@ -122,11 +124,12 @@
         Final camera-ready versions due: <strong>March 7, 2021</strong></p>
         <p>&nbsp;</p>
         <h2 align="left">Review Process</h2>
-        All submissions will be reviewed by at least two independent reviewers. Please be aware of the fact that once the paper is accepted, at least one author per paper needs to register for the workshop and attend the workshop to present the work. In light of the recent events regarding the Coronavirus, AII2021 will be an all-virtual workshop as iConference will be online only.<br>
-        Workshop proceedings will be deposited online in the CEUR workshop proceedings publication service. This way the proceedings will be permanently available and citable (digital persistent identifiers and long-term preservation).
+        <p>All submissions will be reviewed by at least two independent reviewers. Please be aware of the fact that once the paper is accepted, at least one author per paper needs to register for the workshop and attend the workshop to present the work. In light of the recent events regarding the Coronavirus, AII2021 will be an all-virtual workshop as iConference will be online only.<br>
+        Workshop proceedings will be deposited online in the CEUR workshop proceedings publication service. This way the proceedings will be permanently available and citable (digital persistent identifiers and long-term preservation).</p>
+        <p>&nbsp;</p>
         <h2 align="left">Special Issues</h2>
-          Potential target journals for our special issues include <em>Scientometrics</em>, <em>Journal of Informetrics</em>, <em>Journal of Data and Information Science</em>, and <em>Frontiers in Research Metrics and Analytics.</em></p>
-          <p><a name="OrganisingCommittee"></a>        </p>
+          <p>Potential target journals for our special issues include <em>Scientometrics</em>, <em>Journal of Informetrics</em>, <em>Journal of Data and Information Science</em>, and <em>Frontiers in Research Metrics and Analytics.</em></p>
+          <p>&nbsp; </p>
         <h2 align="left">Organising Committee</h2>
         <p align="left"><img src="images/yi_zhang_picture.jpeg" alt="yi_zhang_picture.jpeg" width="165" height="192" class="u-pull-left"> <strong>Yi Zhang</strong> (<a href="mailto:yi.zhang@uts.edu.au">yi.zhang@uts.edu.au</a>) is a Lecturer  at the Centre for Artificial Intelligence, Faculty of   Engineering and  Information Technology, University of Technology Sydney   (UTS), Australia. He  received dual PhD degrees, one from Beijing   Institute of Technology, China and  the other from UTS. He has authored   more than 50 publications. His current  research interests align with   bibliometrics, text analytics, and information  systems. He serves as   diverse roles (e.g., Associate Editor, Editorial Board  Member, and   Managing Guest Editor) for one IEEE Trans and four other  international   journals. He is also a PC Member of several international  conferences. (<a href="https://www.uts.edu.au/staff/yi.zhang">https://www.uts.edu.au/staff/yi.zhang</a>)</p>
         <p align="left">&nbsp;</p>
@@ -140,12 +143,15 @@
         <p align="justify">&nbsp;</p>
         <p align="justify">Arho Suominen, (<a href="mailto: Arho.Suominen@vtt.fi">Arho.Suominen@vtt.fi</a>) VTT Technical Research Centre of Finland, &amp; Tampere University, Industrial Engineering, Finland </p>
         <p align="justify"><strong>All questions about submissions should be emailed to Organizing Committee.</strong></p>
+        <p align="justify">&nbsp;</p>
         <h2 align="left">Programme Committee</h2>
         <ul>
           <li>TBD</li>
         </ul>
+        <p>&nbsp;</p>
         <h2 align="justify">Website</h2>
         <p><a href="https://ai-informetrics.github.io/">https://ai-informetrics.github.io/</a></p>
+        <p>&nbsp;</p>
         
         <h2 align="justify">References</h2>
         <ol>
@@ -156,8 +162,7 @@
           <li>Zhang, Y. and Zhang, C., 2019. Unsupervised keyphrase extraction in academic publications using human attention. <em>17th International Conference on Scientometrics and Informetrics</em> (ISSI 2019), Rome, Italy. </li>
           <li>Zhang, Y., et al., 2017. Scientific evolutionary pathways: Identifying and visualizing relationships for scientific topics. <em>Journal of the Association for Information Science and Technology</em>, 68(8), pp.1925-1939.</li>
         </ol>
-        
-        <a name="links"></a>
+        <p>&nbsp;</p>
         <h2 align="justify">Links</h2>
 		
         <p align="left"><strong>Related  Workshops</strong>：<br>
