--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <p align="justify">You are invited to participate in the 1st Workshop on AI + Informetrics (AII2021) to be held as a virtual event as part of the <a href="https://www.ischools.org/iConference">iConference2021</a>, Virtual, on March 28-31, 2021. See https://ischools.org/Program </p>
         <h2 align="left">Submission Guidelines</h2>
         <p>All papers must be original and not simultaneously submitted to another journal or conference. The following paper categories are welcome:<br>
-          <em><strong>Regular Papers</strong></em> <br>
+          <p><em><strong>Regular Papers</strong></em> <br>
 All submissions must be written in English, following Springer&rsquo;s prescribed LNCS template and should be submitted as PDF files to EasyChair. <br>
 We accept two types Regular Papers:</p>
         <ul>
@@ -139,7 +139,7 @@ We accept two types Regular Papers:</p>
         <p>&nbsp;</p>
         <h2 align="left">Special Issues</h2>
           <p>Potential target journals for our special issues include <em>Scientometrics</em>, <em>Journal of Informetrics</em>, <em>Journal of Data and Information Science</em>, and <em>Frontiers in Research Metrics and Analytics.</em></p>
-          <p>&nbsp; </p>
+        <p>&nbsp; </p>
         <h2 align="left">Organising Committee</h2>
         <p align="left"><img src="images/yi_zhang_picture.jpeg" alt="yi_zhang_picture.jpeg" width="165" height="192" class="u-pull-left"> <strong>Yi Zhang</strong> (<a href="mailto:yi.zhang@uts.edu.au">yi.zhang@uts.edu.au</a>) is a Lecturer  at the Centre for Artificial Intelligence, Faculty of   Engineering and  Information Technology, University of Technology Sydney   (UTS), Australia. He  received dual PhD degrees, one from Beijing   Institute of Technology, China and  the other from UTS. He has authored   more than 50 publications. His current  research interests align with   bibliometrics, text analytics, and information  systems. He serves as   diverse roles (e.g., Associate Editor, Editorial Board  Member, and   Managing Guest Editor) for one IEEE Trans and four other  international   journals. He is also a PC Member of several international  conferences. (<a href="https://www.uts.edu.au/staff/yi.zhang">https://www.uts.edu.au/staff/yi.zhang</a>)</p>
         <p align="left">&nbsp;</p>
