--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <h2 align="left">Submission Guidelines</h2>
         <p>All papers must be original and not simultaneously submitted to another journal or conference. The following paper categories are welcome:<br>
         <p><em><strong>Regular Papers</strong></em> <br>
-All submissions must be written in English, following Springer&rsquo;s prescribed <a herf="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines">LNCS template</a> and should be submitted as PDF files to EasyChair. <br>
+All submissions must be written in English, following Springer&rsquo;s prescribed <a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines">LNCS template</a>. and should be submitted as PDF files to EasyChair. <br>
 We accept two types Regular Papers:</p>
         <ul>
           <li>Full Research Papers: Up to 6,000 words, excluding references.</li>
@@ -125,7 +125,7 @@ We accept two types Regular Papers:</p>
         </ul>
         <p><em><strong>Posters/Demo</strong></em> <br>
           We welcome submissions detailing original, early findings, works in progress and industrial applications of &ldquo;artificial intelligence + informetrics&rdquo; for a special poster session, possibly with a 3-minute presentation in the main session. Poster submissions should be vivid, with brief textual descriptions. <br>
-        All poster abstracts must follow Springer&rsquo;s prescribed  <a herf="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines">LNCS template</a>. Abstracts can be up to 2,500 words in length (excluding references). Abstracts must be fully anonymized. </p>
+        All poster abstracts must follow Springer&rsquo;s prescribed<a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines"> LNCS template</a>. Abstracts can be up to 2,500 words in length (excluding references). Abstracts must be fully anonymized. </p>
         <p align="justify">&nbsp;</p>
         <h2 align="left">Important Dates</h2>
         <p align="justify">All dates are Anywhere on Earth (AoE).</p>
