--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ We accept two types Regular Papers:</p>
         <p><em><strong>Posters/Demo</strong></em> <br>
           We welcome submissions detailing original, early findings, works in progress and industrial applications of &ldquo;artificial intelligence + informetrics&rdquo; for a special poster session, possibly with a 3-minute presentation in the main session. Poster submissions should be vivid, with brief textual descriptions. <br>
         All poster abstracts must follow Springer&rsquo;s prescribed<a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines"> LNCS template</a>. Abstracts can be up to 2,500 words in length (excluding references). Abstracts must be fully anonymized. </p>
-        <p align="justify">&nbsp;</p>
+        <h3 align="justify"><a href="https://easychair.org/conferences/?conf=aii2021" target="_new">Submit a paper</a>        </h3>
         <h2 align="left">Important Dates</h2>
         <p align="justify">All dates are Anywhere on Earth (AoE).</p>
         <p>Submission deadline: <strong>Feb 1, 2021</strong><br>
