--- a/index.html
+++ b/index.html
@@ -99,21 +99,22 @@
       <p>&nbsp;</p>
       <h2 align="left">Purpose of the Workshop</h2>
         <p align="justify">Driven by the big data boom, <em>informetrics</em>, known as the study of quantitative aspects of information, has gained great benefits from <em>artificial intelligence</em> (Nilsson 1998) – including a wide range of intelligent agents through techniques such as neural networks, genetic programming, computer vision, heuristic search, knowledge representation and reasoning, Bayes network, planning and language understanding. With its capacities in analyzing unstructured scalable data and streams, understanding uncertain semantics, and developing robust and repeatable models, &ldquo;<em>Artificial Intelligence + Informetrics</em>&rdquo; has demonstrated enormous success in turning big data into big value and impact by handling diverse challenges raised from multiple disciplines and research areas. For example, bibliometric-enhanced information retrieval (Mayr et al., 2014), science mapping with topic models (Suominen and Toivanen, 2016), streaming data analytics for tracking technological change (Zhang et al., 2017), and entity extraction with unsupervised machine learning techniques (Zhang and Zhang, 2019). Such endeavours with broadened perspectives from machine intelligence would portend far-reaching implications for science (Fortunato et al., 2018), but how to effectively cohere the power of AI and informetrics to create cross-disciplinary solutions is still elusive from neither theoretical nor practical perspectives.<br> </p>
-        <p>This workshop is to gather researchers and practical users to open a collaborative platform for exchanging ideas, sharing pilot studies, and scoping future directions on this cutting-edge venue. We highlight &ldquo;<strong><em>AI + Informetrics</em></strong>&rdquo; as endeavors in constructing fundamental theories, developing novel methodologies, bridging conceptual knowledge with practical uses, and creating real-word solutions.</p>
-        <p>Interests to this workshop include, but not limited to the following topics:        </p>
-        <ul>
-          <li>Informetrics with machine learning (including deep learning)</li>
-          <li>Informetrics with natural language processing or computational linguistics</li>
-          <li>Informetrics with computer vision</li>
-          <li>Informetrics with other related AI techniques (e.g., information retrieval)</li>
-          <li>AI for science of science</li>
-          <li>AI for science, technology, &amp; innovation</li>
-          <li>AI for research policy and strategic management</li>
-          <li>Applications of AI-enhanced informetrics	</li>
-        </ul>
+        <p>This workshop is to gather researchers and practical users to open a collaborative platform for exchanging ideas, sharing pilot studies, and scoping future directions on this cutting-edge venue. We highlight &ldquo;<strong><em>AI + Informetrics</em></strong>&rdquo; as endeavors in constructing fundamental theories, developing novel methodologies, bridging conceptual knowledge with practical uses, and creating real-word solutions.        </p>
         <p>&nbsp;</p>
         <h2 align="left">Call for Papers</h2>
     <p align="justify">You are invited to participate in the 1st Workshop on AI + Informetrics (AII2021) to be held as a virtual event as part of the <a href="https://www.ischools.org/iConference">iConference2021</a>, Virtual, on March 28-31, 2021. See https://ischools.org/Program </p>
+    <p>Interests to this workshop include, but not limited to the following topics: </p>
+    <ul>
+      <li>Informetrics with machine learning (including deep learning)</li>
+      <li>Informetrics with natural language processing or computational linguistics</li>
+      <li>Informetrics with computer vision</li>
+      <li>Informetrics with other related AI techniques (e.g., information retrieval)</li>
+      <li>AI for science of science</li>
+      <li>AI for science, technology, &amp; innovation</li>
+      <li>AI for research policy and strategic management</li>
+      <li>Applications of AI-enhanced informetrics </li>
+    </ul>
+    <p align="justify">&nbsp;</p>
         <h2 align="left">Submission Guidelines</h2>
         <p>All papers must be original and not simultaneously submitted to another journal or conference. The following paper categories are welcome:<br>
         <p><em><strong>Regular Papers</strong></em> <br>
@@ -127,13 +128,14 @@ We accept two types Regular Papers:</p>
           We welcome submissions detailing original, early findings, works in progress and industrial applications of &ldquo;artificial intelligence + informetrics&rdquo; for a special poster session, possibly with a 3-minute presentation in the main session. Poster submissions should be vivid, with brief textual descriptions. <br>
         All poster abstracts must follow Springer&rsquo;s prescribed<a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines"> LNCS template</a>. Abstracts can be up to 2,500 words in length (excluding references). Abstracts must be fully anonymized. </p>
         <h3 align="justify"><a href="https://easychair.org/conferences/?conf=aii2021" target="_new">Submit a paper</a>        </h3>
+        <p align="justify">&nbsp;</p>
         <h2 align="left">Important Dates</h2>
         <p align="justify">All dates are Anywhere on Earth (AoE).</p>
         <p>Submission deadline: <strong>Feb 1, 2021</strong><br>
           Notification date: <strong>Feb 28, 2021</strong><br>
         Final camera-ready versions due: <strong>March 7, 2021</strong></p>
         <p>&nbsp;</p>
-        <h2 align="left">Review Process</h2>
+        <h2 align="left">Review Process &amp; Proceedings</h2>
         <p>All submissions will be reviewed by at least two independent reviewers. Please be aware of the fact that once the paper is accepted, at least one author per paper needs to register for the workshop and attend the workshop to present the work. In light of the recent events regarding the Coronavirus, AII2021 will be an all-virtual workshop as iConference will be online only.<br>
         Workshop proceedings will be deposited online in the CEUR workshop proceedings publication service. This way the proceedings will be permanently available and citable (digital persistent identifiers and long-term preservation).</p>
         <p>&nbsp;</p>
