--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </ul>
     <p align="justify">&nbsp;</p>
         <h2 align="left">Submission Guidelines</h2>
-        <p>All papers must be original and not simultaneously submitted to another journal or conference. The following paper categories are welcome:<br>
+        <p>All papers should be submitted as PDF files to <a href="https://easychair.org/conferences/?conf=aii2021">EasyChair</a>. All papers must be original and not simultaneously submitted to another journal or conference. The following paper categories are welcome:<br>
         <p><em><strong>Regular Papers</strong></em> <br>
 All submissions must be written in English, following Springer&rsquo;s prescribed <a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines">LNCS template</a>. and should be submitted as PDF files to EasyChair. <br>
 We accept two types Regular Papers:</p>
