--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@ We accept two types Regular Papers:</p>
           <li>Short Research Papers: Up to 3,000 words, excluding references.</li>
         </ul>
         <p><em><strong>Posters/Demo</strong></em> <br>
-          We welcome submissions detailing original, early findings, works in progress and industrial applications of &ldquo;artificial intelligence + informetrics&rdquo; for a special poster session, possibly with a 3-minute presentation in the main session. Poster submissions should be vivid, with brief textual descriptions. <br>
-        All poster abstracts must follow Springer&rsquo;s prescribed<a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines"> LNCS template</a>. Abstracts can be up to 2,500 words in length (excluding references). Abstracts must be fully anonymized. </p>
+          We welcome submissions detailing original, early findings, works in progress and industrial applications of &ldquo;artificial intelligence + informetrics&rdquo; for a special poster/demo session, possibly with a 3-minute presentation in the main session. Poster/demo submissions should be vivid, with brief textual descriptions. <br>
+        All poster/domo abstracts must follow Springer&rsquo;s prescribed<a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines"> LNCS template</a>. Abstracts can be up to 2,500 words in length (excluding references). Abstracts must be fully anonymized. </p>
         <h3 align="justify"><a href="https://easychair.org/conferences/?conf=aii2021" target="_new">Submit a paper</a>        </h3>
         <p align="justify">&nbsp;</p>
         <h2 align="left">Important Dates</h2>
