--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ We accept two types Regular Papers:</p>
         <p>All submissions will be reviewed by at least two independent reviewers. Please be aware of the fact that once the paper is accepted, at least one author per paper needs to register for the workshop and attend the workshop to present the work. In light of the recent events regarding the Coronavirus, AII2021 will be an all-virtual workshop as iConference will be online only.<br>
         Workshop proceedings will be deposited online in the CEUR workshop proceedings publication service. This way the proceedings will be permanently available and citable (digital persistent identifiers and long-term preservation).</p>
         <p>&nbsp;</p>
-        <h2 align="left">Special Issues</h2>
+        <h2 align="left">Special Issue</h2>
           <p>Accepted submissions are eligible for submitting to our special issue in <a href="https://www.springer.com/journal/11192">Scientometrics</a>.</p>
         <p>&nbsp; </p>
         <h2 align="left">Organising Committee</h2>
