--- a/index.html
+++ b/index.html
@@ -157,9 +157,35 @@ We accept two types Regular Papers:</p>
         <p align="justify"><strong>All questions about submissions should be emailed to Organizing Committee.</strong></p>
         <p align="justify">&nbsp;</p>
         <h2 align="left">Programme Committee</h2>
-        <ul>
-          <li>TBD</li>
-        </ul>
+<ul>
+<li>Alireza Abbasi， University of New South Wales</li>
+<li>Andrea Scharnhorst， DANS-KNAW</li> 
+<li>Bart Thijs， KU Leuven</li> 
+<li>Chao Lu， Hohai University</li>
+<li>Chao Min， Nanjing University</li>
+<li>Dietmar Wolfram， University of Wisconsin-Milwaukee</li>
+<li>Dongo Wang， Nanjing Argricultural University</li>
+<li>Guillaume Cabanac， University of Toulouse</li>
+<li>Haihua Chen， University of North Texas</li>
+<li>Hongshu Chen， Beijing Institute of Technology</li>
+<li>Iana Atanassova， CRIT, Université de Franche-Comté</li>
+<li>Jian Du， Peking University</li>
+<li>Jian Xu， Sun Yat-Sen University</li>
+<li>Jin Mao， Wuhan University</li>
+<li>Kai Li， Renmin University of China</li>
+<li>Mengjia Wu， University of Technology Sydney</li>
+<li>Philipp Schaer， TH Cologne</li>
+<li>Qingqing Zhou， Nanjing Normal University</li>
+<li>Shuo Xu， Beijing University of Technology</li>
+<li>Stasa Milojevic， Indiana University Bloomington</li>
+<li>Vivek Kumar Singh， Banaras Hindu University</li>
+<li>Xiaolan Wu， Nanjing Normal University</li>
+<li>Xuefeng Wang， Beijing Institute of Technology</li>
+<li>Yingyi Zhang， Nanjing University of Science and Technology</li>
+<li>Yuya Kajikawa， Tokyo Institute of Technology</li>
+<li>Yuzhuo Wang， Nanjing University of Science and Technology</li>
+<li>Zhigang Hu， Dalian University of Technology</li>
+</ul>
         <p>&nbsp;</p>
         <h2 align="justify">Website</h2>
         <p><a href="https://ai-informetrics.github.io/">https://ai-informetrics.github.io/</a></p>
