--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>1st Workshop on AI + Informetrics (AII2021)</title>
-  <meta name="description" content="JCDL 2020 Workshop">
+  <meta name="description" content="st Workshop on AI + Informetrics (AII2021 @ iConference2021">
   <meta name="author" content="">
 
   <!-- Mobile Specific Metas
@@ -164,7 +164,7 @@ We accept two types Regular Papers:</p>
 <li>Chao Lu， Hohai University</li>
 <li>Chao Min， Nanjing University</li>
 <li>Dietmar Wolfram， University of Wisconsin-Milwaukee</li>
-<li>Dongo Wang， Nanjing Argricultural University</li>
+<li>Dongbo Wang， Nanjing Argricultural University</li>
 <li>Guillaume Cabanac， University of Toulouse</li>
 <li>Haihua Chen， University of North Texas</li>
 <li>Hongshu Chen， Beijing Institute of Technology</li>
