--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@ We accept two types Regular Papers:</p>
         <p>&nbsp;</p>
         <h2 align="left">Review Process &amp; Proceedings</h2>
         <p>All submissions will be reviewed by at least two independent reviewers. Please be aware of the fact that once the paper is accepted, at least one author per paper needs to register for the workshop and attend the workshop to present the work. In light of the recent events regarding the Coronavirus, AII2021 will be an all-virtual workshop as iConference will be online only.<br></p>
-        <p>All papers accepted for presentation at iConference 2021 will be published in <a href="http://www.springer.com/gp/computer-science/lncs">Springer&rsquo;s Lecture Notes in Computer Science series</a> OR online in the <a href="http://ceur-ws.org/">CEUR workshop proceedings</a> publication service(TBD later). This way the proceedings will be  permanently available and citable (digital persistent identifiers and  long-term preservation).</p>
+        <p>Workshop proceedings will be deposited online in either <a href="http://www.springer.com/gp/computer-science/lncs">Springer&rsquo;s Lecture Notes in Computer Science series</a> OR the <a href="http://ceur-ws.org/">CEUR workshop proceedings</a> publication service. This way the proceedings will be permanently available and citable (digital persistent identifiers and long-term preservation).</p>
         <p>&nbsp;</p>
         <h2 align="left">Special Issue</h2>
-          <p>Accepted submissions are eligible for submitting to our special issue in <a href="https://www.springer.com/journal/11192">Scientometrics</a>.</p>
+          <p>Accepted submissions will be invited to submit to our special issue in <a href="https://www.springer.com/journal/11192">Scientometrics</a>.</p>
         <p>&nbsp; </p>
         <h2 align="left">Organising Committee</h2>
         <p align="left"><img src="images/yi_zhang_picture.jpeg" alt="yi_zhang_picture.jpeg" width="165" height="192" class="u-pull-left"> <strong>Yi Zhang</strong> (<a href="mailto:yi.zhang@uts.edu.au">yi.zhang@uts.edu.au</a>) is a Lecturer  at the Centre for Artificial Intelligence, Faculty of   Engineering and  Information Technology, University of Technology Sydney   (UTS), Australia. He  received dual PhD degrees, one from Beijing   Institute of Technology, China and  the other from UTS. He has authored   more than 50 publications. His current  research interests align with   bibliometrics, text analytics, and information  systems. He serves as   diverse roles (e.g., Associate Editor, Editorial Board  Member, and   Managing Guest Editor) for one IEEE Trans and four other  international   journals. He is also a PC Member of several international  conferences. (<a href="https://www.uts.edu.au/staff/yi.zhang">https://www.uts.edu.au/staff/yi.zhang</a>) </p><br>
@@ -158,31 +158,33 @@ We accept two types Regular Papers:</p>
         <p align="justify">&nbsp;</p>
         <h2 align="left">Programme Committee</h2>
 <ul>
-<li>Alireza Abbasi， University of New South Wales</li>
-<li>Andrea Scharnhorst， DANS-KNAW</li> 
-<li>Chao Lu， Hohai University</li>
-<li>Chao Min， Nanjing University</li>
-<li>Dietmar Wolfram， University of Wisconsin-Milwaukee</li>
-<li>Dongbo Wang， Nanjing Argricultural University</li>
-<li>Guillaume Cabanac， University of Toulouse</li>
-<li>Haihua Chen， University of North Texas</li>
-<li>Hongshu Chen， Beijing Institute of Technology</li>
-<li>Iana Atanassova， CRIT, Université de Franche-Comté</li>
-<li>Jian Du， Peking University</li>
-<li>Jian Xu， Sun Yat-Sen University</li>
-<li>Jin Mao， Wuhan University</li>
-<li>Kai Li， Renmin University of China</li>
-<li>Mengjia Wu， University of Technology Sydney</li>
-<li>Philipp Schaer， TH Cologne</li>
-<li>Qingqing Zhou， Nanjing Normal University</li>
-<li>Shuo Xu， Beijing University of Technology</li>
-<li>Stasa Milojevic， Indiana University Bloomington</li>
-<li>Vivek Kumar Singh， Banaras Hindu University</li>
-<li>Xiaolan Wu， Nanjing Normal University</li>
-<li>Xuefeng Wang， Beijing Institute of Technology</li>
-<li>Yingyi Zhang， Nanjing University of Science and Technology</li>
-<li>Yuzhuo Wang， Nanjing University of Science and Technology</li>
-<li>Zhigang Hu， Dalian University of Technology</li>
+ 	<li>Alireza Abbasi, UNSW Canberra</li>
+    <li>Andrea Scharnhorst, DANS-KNAW</li>
+    <li>Bart Thijs, ECOOM, MSI, K.U.Leuven</li>
+    <li>Chao Min, Nanjing University</li>
+    <li>Chao Lu,  Hohai University</li>
+    <li>Dietmar Wolfram, University of Wisconsin-Milwaukee</li>
+    <li>Dongbo Wang, Nanjing Argricultural University</li>
+    <li>Guillaume Cabanac, IRIT - Université Paul Sabatier Toulouse 3</li>
+    <li>Haihua Chen, University of North Texas</li>
+    <li>Hongshu Chen, Beijing Institute of Technology</li>
+    <li>Iana Atanassova, CRIT, Université de Bourgogne Franche-Comté</li>
+    <li>Jian Xu, Sun Yat-sen university</li>
+    <li>Jian Du, Peking University</li>
+    <li>Jin Mao, Wuhan University</li>
+    <li>Kai Li, Renmin University of China</li>
+    <li>Marc Bertin, Université Claude Bernard Lyon 1</li>
+    <li>Mengjia Wu, University of Technolog Sydney</li>
+    <li>Philipp Schaer, TH Köln (University of Applied Sciences)</li>
+    <li>Qingqing Zhou, Nanjing Normal University</li>
+    <li>Shuo Xu, Beijing University of Technology</li>
+    <li>Vivek Kumar Singh, Banaras Hindu University, Varanasi, U.P.,India</li>
+    <li>Wu Xiaolan, Nanjing Normal University</li>
+    <li>Xuefeng Wang, Beijing Institute of Technology</li>
+    <li>Ying Huang, Wuhan University</li>
+    <li>Yingyi Zhang, Nanjing University of Science and Technology</li>
+    <li>Yuzhuo Wang, Nanjing University of Science and Technology</li>
+    <li>Yuya Kajikawa, Tokyo University of Technology</li>
 </ul>
         <p>&nbsp;</p>
         <h2 align="justify">Website</h2>
