--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@ We accept two types Regular Papers:</p>
     <li>Vivek Kumar Singh, Banaras Hindu University, Varanasi, U.P.,India</li>
     <li>Wu Xiaolan, Nanjing Normal University</li>
     <li>Xuefeng Wang, Beijing Institute of Technology</li>
+    <li>Ying Guo, China University of Political Science and Law</li>
     <li>Ying Huang, Wuhan University</li>
     <li>Yingyi Zhang, Nanjing University of Science and Technology</li>
     <li>Yuzhuo Wang, Nanjing University of Science and Technology</li>
