--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <div class="one-half column" style="margin-top: 5%; color: #000;">
       <p>1st Workshop on AI + Informetrics (AII2021) at the <a href="https://www.ischools.org/iConference">iConference2021</a>, Virtual</p>
       <p><img src="images/Logo_iconference.png" width="600" height="125" alt=""/></p>
-      <p>&nbsp;</p>
+      <span class="news"><strong>News</strong></span> : The organizing committee of the AI+Informetrics Workshop 2021 is aware that it is a challenging time due to the global COVID-19 pandemics. Aiming to provide a convenient time for the community to conduct high-quality research, we have decided to extend the deadline for submission to: <span class="news"><strong>February 20th, 2021</strong></span> (ANY TIMEZONE on earth).</p>
       <h2 align="left">Purpose of the Workshop</h2>
         <p align="justify">Driven by the big data boom, <em>informetrics</em>, known as the study of quantitative aspects of information, has gained great benefits from <em>artificial intelligence</em> (Nilsson 1998) – including a wide range of intelligent agents through techniques such as neural networks, genetic programming, computer vision, heuristic search, knowledge representation and reasoning, Bayes network, planning and language understanding. With its capacities in analyzing unstructured scalable data and streams, understanding uncertain semantics, and developing robust and repeatable models, &ldquo;<em>Artificial Intelligence + Informetrics</em>&rdquo; has demonstrated enormous success in turning big data into big value and impact by handling diverse challenges raised from multiple disciplines and research areas. For example, bibliometric-enhanced information retrieval (Mayr et al., 2014), science mapping with topic models (Suominen and Toivanen, 2016), streaming data analytics for tracking technological change (Zhang et al., 2017), and entity extraction with unsupervised machine learning techniques (Zhang and Zhang, 2019). Such endeavours with broadened perspectives from machine intelligence would portend far-reaching implications for science (Fortunato et al., 2018), but how to effectively cohere the power of AI and informetrics to create cross-disciplinary solutions is still elusive from neither theoretical nor practical perspectives.<br> </p>
         <p>This workshop is to gather researchers and practical users to open a collaborative platform for exchanging ideas, sharing pilot studies, and scoping future directions on this cutting-edge venue. We highlight &ldquo;<strong><em>AI + Informetrics</em></strong>&rdquo; as endeavors in constructing fundamental theories, developing novel methodologies, bridging conceptual knowledge with practical uses, and creating real-word solutions.        </p>
@@ -215,14 +215,14 @@ We accept two types Regular Papers:</p>
 		   <p align="left"><strong>EEKE 2020</strong><strong>：</strong>First Workshop on Extraction and Evaluation of Knowledge Entities from Scientific Documents <br>
              <strong>Venue:</strong> ACM/IEEE Joint Conference on Digital Libraries 2020 (JCDL2020)<br>
            <strong>Website</strong>: <a href="https://eeke2020.github.io/">https://eeke2020.github.io/</a></p>
-
+       </p>
       </div>
 
 
  
     </div>
     </div>
-  </div>
+
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
