--- a/index.html
+++ b/index.html
@@ -101,6 +101,37 @@
       <p>Keynote by Dr. <strong>Kevin Boyack</strong> (SciTech Strategies): <strong>Global Models of Science and Their Applications</strong>. </p>
       <p><span class="news"><strong>News</strong></span> : The organizing committee of the AI+Informetrics Workshop 2021 is aware that it is a challenging time due to the global COVID-19 pandemics. Aiming to provide a convenient time for the community to conduct high-quality research, we have decided to extend the deadline for submission to: <span class="news"><strong>February 20th, 2021</strong></span> (ANY TIMEZONE on earth).</p>
       </p>
+      <h2 align="left">Accepted Papers</h2>
+      <p align="justify">The following papers have been accepted and will be presented at AII2021.</p>
+      <h3 align="left">Long Papers</h3>
+      <div align="justify">
+        <ul>
+          
+          <li>Xin An, Xin Sun and Shuo Xu. Important Citations Identification with Semi-supervised Classification Model</li>
+          <li>Sha Yuan, Zhou Shao, Yu Zhang, Tong Xiao and Yifan Wang. Attention: to Better Stand on the Shoulders of Giants.</li>
+          <li>Lu Huang, Xingxing Ni, Xiang Chen and Yi Zhang. Measuring interdisciplinary interactions using citation analysis and semantic analysis.</li>
+          <li>Bolin Hua and Youngkug Shin. Extraction of Originative Sentence from Conclusion in Academic Papers.</li>
+          <li>Xin Zhang, Yi Wen and Haiyun Xu. Research on Heterogeneous Enhanced Network Embedding for Cooperation Prediction.</li>
+        </ul>
+      </div>
+      <h3 align="left">Short Papers</h3>
+      <div align="justify">
+        <ul>
+          <li>Asta Bäck, Arash Hajikhani and Arho Suominen. Text Mining on Job Advertisement Data: Systematic Process for Detecting Artificial Intelligence Related Jobs.</li>
+          <li>Zekun Deng, Zixin Zeng, Weiye Gu, Jiawen Ji and Bolin Hua. Automatic Related Work Section Generation by Sentence Extraction and Reordering.</li>
+          <li>Xiaowen Xi, Ying Guo and Weiyu Duan. Recommendation of Academic Collaborators: A Methodology Incorporating Word Embedding and Network Embedding.</li>
+          <li>Shiyun Wang, Jin Mao and Hao Xie. Automatic identification and classification of integrated knowledge content in an interdisciplinary field: A case study on eHealth.</li>
+          <li>Jaeyoung Choi, Chaeeun Han, Heeyoon Yang, Yeonkyoung Hong, Seoyoung Jeon and Yongjun Zhu. Embedding-based Neural Network Models for Book Recommendation in University Librarie.</li>
+          <li>Xuefeng Wang, Shuo Zhang and Yuqin Liu. ITGInsight — Discovering and Visualizing Science, Technology and Innovation Information for Generating Competitive Technological Intelligence.</li>
+          <li>Jingwen Luo, Fang Zou, Yujie Peng and Ying Huang. Emerging Technology Opportunity Identification Based on Community Detection and Burst Detection: A Case study of Intelligent Robots.</li>
+          <li>Hongshu Chen and Xinna Song. Collaboration and Knowledge Networks: a Framework on Analyzing Evolution of University-industry Collaborative Innovation.</li>
+          <li>Chuan Jiang, Dongbo Wang, Si Shen, Wenhao Ye and Jiangfeng Liu. Building the Extraction Model of the Software Entities from Full-Text of Research Articles Based on BERT.</li>
+          <li>Ruiyuan Li, Pin Tian and Shenghui Wang. Study concept drift in 150-year Englishliterature.</li>
+          <li>Arash Hajikhani and Arho Suominen. The Interrelation of Sustainable Development Goals in Publications and Patents: A Machine Learning Approach.</li>
+          <li>Junwan Liu and Rui Wang. Research performance prediction for scientists using LSTM neural networks.</li>
+        </ul>
+        <p>&nbsp;</p>
+      </div>
       <h2 align="left">Purpose of the Workshop</h2>
         <p align="justify">Driven by the big data boom, <em>informetrics</em>, known as the study of quantitative aspects of information, has gained great benefits from <em>artificial intelligence</em> (Nilsson 1998) – including a wide range of intelligent agents through techniques such as neural networks, genetic programming, computer vision, heuristic search, knowledge representation and reasoning, Bayes network, planning and language understanding. With its capacities in analyzing unstructured scalable data and streams, understanding uncertain semantics, and developing robust and repeatable models, &ldquo;<em>Artificial Intelligence + Informetrics</em>&rdquo; has demonstrated enormous success in turning big data into big value and impact by handling diverse challenges raised from multiple disciplines and research areas. For example, bibliometric-enhanced information retrieval (Mayr et al., 2014), science mapping with topic models (Suominen and Toivanen, 2016), streaming data analytics for tracking technological change (Zhang et al., 2017), and entity extraction with unsupervised machine learning techniques (Zhang and Zhang, 2019). Such endeavours with broadened perspectives from machine intelligence would portend far-reaching implications for science (Fortunato et al., 2018), but how to effectively cohere the power of AI and informetrics to create cross-disciplinary solutions is still elusive from neither theoretical nor practical perspectives.<br> </p>
         <p>This workshop is to gather researchers and practical users to open a collaborative platform for exchanging ideas, sharing pilot studies, and scoping future directions on this cutting-edge venue. We highlight &ldquo;<strong><em>AI + Informetrics</em></strong>&rdquo; as endeavors in constructing fundamental theories, developing novel methodologies, bridging conceptual knowledge with practical uses, and creating real-word solutions.        </p>
