--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           
           <li>Xin An, Xin Sun and Shuo Xu. Important Citations Identification with Semi-supervised Classification Model</li>
           <li>Sha Yuan, Zhou Shao, Yu Zhang, Tong Xiao and Yifan Wang. Attention: to Better Stand on the Shoulders of Giants.</li>
-          <li>Lu Huang, Xingxing Ni, Xiang Chen and Yi Zhang. Measuring interdisciplinary interactions using citation analysis and semantic analysis.</li>
+          <li>Lu Huang, Xingxing Ni, Xiang Chen and Yi Zhang. Measuring Interdisciplinary Interactions Using Citation Analysis and Semantic Analysis.</li>
           <li>Bolin Hua and Youngkug Shin. Extraction of Originative Sentence from Conclusion in Academic Papers.</li>
           <li>Xin Zhang, Yi Wen and Haiyun Xu. Research on Heterogeneous Enhanced Network Embedding for Cooperation Prediction.</li>
         </ul>
@@ -120,15 +120,15 @@
           <li>Asta Bäck, Arash Hajikhani and Arho Suominen. Text Mining on Job Advertisement Data: Systematic Process for Detecting Artificial Intelligence Related Jobs.</li>
           <li>Zekun Deng, Zixin Zeng, Weiye Gu, Jiawen Ji and Bolin Hua. Automatic Related Work Section Generation by Sentence Extraction and Reordering.</li>
           <li>Xiaowen Xi, Ying Guo and Weiyu Duan. Recommendation of Academic Collaborators: A Methodology Incorporating Word Embedding and Network Embedding.</li>
-          <li>Shiyun Wang, Jin Mao and Hao Xie. Automatic identification and classification of integrated knowledge content in an interdisciplinary field: A case study on eHealth.</li>
+          <li>Shiyun Wang, Jin Mao and Hao Xie. Automatic Identification and Classification of Integrated Knowledge Content in an Interdisciplinary Field: A Case Study on eHealth.</li>
           <li>Jaeyoung Choi, Chaeeun Han, Heeyoon Yang, Yeonkyoung Hong, Seoyoung Jeon and Yongjun Zhu. Embedding-based Neural Network Models for Book Recommendation in University Librarie.</li>
           <li>Xuefeng Wang, Shuo Zhang and Yuqin Liu. ITGInsight — Discovering and Visualizing Science, Technology and Innovation Information for Generating Competitive Technological Intelligence.</li>
           <li>Jingwen Luo, Fang Zou, Yujie Peng and Ying Huang. Emerging Technology Opportunity Identification Based on Community Detection and Burst Detection: A Case study of Intelligent Robots.</li>
           <li>Hongshu Chen and Xinna Song. Collaboration and Knowledge Networks: a Framework on Analyzing Evolution of University-industry Collaborative Innovation.</li>
           <li>Chuan Jiang, Dongbo Wang, Si Shen, Wenhao Ye and Jiangfeng Liu. Building the Extraction Model of the Software Entities from Full-Text of Research Articles Based on BERT.</li>
-          <li>Ruiyuan Li, Pin Tian and Shenghui Wang. Study concept drift in 150-year English literature.</li>
+          <li>Ruiyuan Li, Pin Tian and Shenghui Wang. Study Concept Drift in 150-year English Literature.</li>
           <li>Arash Hajikhani and Arho Suominen. The Interrelation of Sustainable Development Goals in Publications and Patents: A Machine Learning Approach.</li>
-          <li>Junwan Liu and Rui Wang. Research performance prediction for scientists using LSTM neural networks.</li>
+          <li>Junwan Liu and Rui Wang. Research Performance Prediction for Scientists Using LSTM Neural Networks.</li>
         </ul>
         <p>&nbsp;</p>
       </div>
