--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ We accept two types Regular Papers:</p>
         <p>&nbsp;</p>
         <h2 align="left">Review Process &amp; Proceedings</h2>
         <p>All submissions will be reviewed by at least two independent reviewers. Please be aware of the fact that once the paper is accepted, at least one author per paper needs to register for the workshop and attend the workshop to present the work. In light of the recent events regarding the Coronavirus, AII2021 will be an all-virtual workshop as iConference will be online only.<br></p>
-        <p>Workshop proceedings will be deposited online in either <a href="http://www.springer.com/gp/computer-science/lncs">Springer&rsquo;s Lecture Notes in Computer Science series</a> OR the <a href="http://ceur-ws.org/">CEUR workshop proceedings</a> publication service. This way the proceedings will be permanently available and citable (digital persistent identifiers and long-term preservation).</p>
+        <p>Workshop proceedings will be deposited online in the <a href="http://ceur-ws.org/">CEUR workshop proceedings</a> publication service. This way the proceedings will be permanently available and citable (digital persistent identifiers and long-term preservation).</p>
         <p>&nbsp;</p>
         <h2 align="left">Special Issue</h2>
           <p>Accepted submissions will be invited to submit to our special issue in <a href="https://www.springer.com/journal/11192">Scientometrics</a>.</p>
