--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <div class="one-half column" style="margin-top: 5%; color: #000;">
       <p>1st Workshop on AI + Informetrics (AII2021) at the <a href="https://www.ischools.org/iConference">iConference2021</a>, Virtual</p>
       <p><img src="images/Logo_iconference.png" width="600" height="125" alt=""/></p>
-      <p><span class="news"><strong>News:</strong></span></p>
+      <p><span class="news"><strong>News:</strong></span> Since AII Workshop is hosted by iConference2021, at least one author per paper must register, see instructions here <a href="%3Chttps:/www.ischools.org/Registration">&lt;https://www.ischools.org/Registration</a>&gt;. </p>
       <p>Keynote by Prof. <strong>Ying Ding</strong> (School of Information, University of Texas at Austin): <em><strong>AI and Science of Science</strong></em>.</p>
       <p>Keynote by Dr. <strong>Kevin Boyack</strong> (SciTech Strategies): <strong>Global Models of Science and Their Applications</strong>. </p>
       <p><span class="news"><strong>News</strong></span> : The organizing committee of the AI+Informetrics Workshop 2021 is aware that it is a challenging time due to the global COVID-19 pandemics. Aiming to provide a convenient time for the community to conduct high-quality research, we have decided to extend the deadline for submission to: <span class="news"><strong>February 20th, 2021</strong></span> (ANY TIMEZONE on earth).</p>
