--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
       <p><span class="news"><strong>News</strong></span> : The organizing committee of the AI+Informetrics Workshop 2021 is aware that it is a challenging time due to the global COVID-19 pandemics. Aiming to provide a convenient time for the community to conduct high-quality research, we have decided to extend the deadline for submission to: <span class="news"><strong>February 20th, 2021</strong></span> (ANY TIMEZONE on earth).</p>
       </p>
       <h2 align="left">Accepted Papers</h2>
-      <p align="justify">The following papers have been accepted and will be presented at AII2021.</p>
-      <h3 align="left">Long Papers</h3>
+      <p align="justify">The following papers have been accepted and will be presented at AII2021 on <strong> March 17,2021 </strong>.</p>
+      <h3 align="left">Long Presentation (15 mins)</h3>
       <div align="justify">
         <ul>
           
@@ -114,7 +114,7 @@
           <li>Xin Zhang, Yi Wen and Haiyun Xu. Research on Heterogeneous Enhanced Network Embedding for Cooperation Prediction.</li>
         </ul>
       </div>
-      <h3 align="left">Short Papers</h3>
+      <h3 align="left">Short Presentation (10 mins)</h3>
       <div align="justify">
         <ul>
           <li>Asta Bäck, Arash Hajikhani and Arho Suominen. Text Mining on Job Advertisement Data: Systematic Process for Detecting Artificial Intelligence Related Jobs.</li>
