--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 5%; color: #000;">
-      <p>1st Workshop on AI + Informetrics (AII2021) at the <a href="https://www.ischools.org/iConference">iConference2021</a>, Virtual</p>
+      <p>1st Workshop on AI + Informetrics (AII2021) at the <a href="https://www.ischools.org/iConference">iConference2021</a>, Virtual, March 17</p>
       <p><img src="images/Logo_iconference.png" width="600" height="125" alt=""/></p>
       <p><span class="news"><strong>News:</strong></span> Since AII Workshop is hosted by iConference2021, at least one author per paper must register, see instructions here <a href="%3Chttps:/www.ischools.org/Registration">&lt;https://www.ischools.org/Registration</a>&gt;. </p>
       <p>Keynote by Prof. <strong>Ying Ding</strong> (School of Information, University of Texas at Austin): <em><strong>AI and Science of Science</strong></em>.</p>
