--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@ We accept two types Regular Papers:</p>
         <p>Submission deadline: <strong>Feb 20, 2021</strong><br>
           Notification date: <strong>Mar 3, 2021</strong><br>
         Final camera-ready versions due: <strong>Mar 15, 2021</strong></p>
+	Workshop: <strong>Mar 17, 2021</strong></p>
         <p>&nbsp;</p>
         <h2 align="left">Review Process &amp; Proceedings</h2>
         <p>All submissions will be reviewed by at least two independent reviewers. Please be aware of the fact that once the paper is accepted, at least one author per paper needs to register for the workshop and attend the workshop to present the work. In light of the recent events regarding the Coronavirus, AII2021 will be an all-virtual workshop as iConference will be online only.<br></p>
