--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       </p>
       <h2 align="left">Accepted Papers</h2>
       <p align="justify">The following papers have been accepted and will be presented at AII2021 on <strong> March 17,2021 </strong>.</p>
-      <h3 align="left">Long Presentation (15 mins)</h3>
+      <h3 align="left">Long Presentation (15*5 mins)</h3>
       <div align="justify">
         <ul>
           
@@ -114,7 +114,7 @@
           <li>Xin Zhang, Yi Wen and Haiyun Xu. Research on Heterogeneous Enhanced Network Embedding for Cooperation Prediction.</li>
         </ul>
       </div>
-      <h3 align="left">Short Presentation (10 mins)</h3>
+      <h3 align="left">Short Presentation (10*12 mins)</h3>
       <div align="justify">
         <ul>
           <li>Asta Bäck, Arash Hajikhani and Arho Suominen. Text Mining on Job Advertisement Data: Systematic Process for Detecting Artificial Intelligence Related Jobs.</li>
@@ -168,7 +168,7 @@ We accept two types Regular Papers:</p>
         <p align="justify">All dates are Anywhere on Earth (AoE).</p>
         <p>Submission deadline: <strong>Feb 20, 2021</strong><br>
           Notification date: <strong>Mar 3, 2021</strong><br>
-        Final camera-ready versions due: <strong>Mar 15, 2021</strong></p>
+        Final camera-ready versions due: <strong>Mar 15, 2021</strong><br>
 	Workshop: <strong>Mar 17, 2021</strong></p>
         <p>&nbsp;</p>
         <h2 align="left">Review Process &amp; Proceedings</h2>
