--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <p><span class="news"><strong>News</strong></span> : The organizing committee of the AI+Informetrics Workshop 2021 is aware that it is a challenging time due to the global COVID-19 pandemics. Aiming to provide a convenient time for the community to conduct high-quality research, we have decided to extend the deadline for submission to: <span class="news"><strong>February 20th, 2021</strong></span> (ANY TIMEZONE on earth).</p>
       </p>
       <h2 align="left">Accepted Papers</h2>
-      <p align="justify">The following papers have been accepted and will be presented at AII2021 on <strong> March 17,2021 </strong>.</p>
+      <p align="justify">The following 17 papers have been accepted and will be presented at AII2021 on <strong> March 17,2021 </strong>.</p>
       <h3 align="left">Long Presentation (15*5 mins)</h3>
       <div align="justify">
         <ul>
